# Software-QA-Testing-Framework

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  proxy.js  test_fastapi_sse.py  vm-setup.sh
server/: .env.example  .gitignore  Dockerfile  README.md  cleanup.py  fix_db.py  init_db.py  package.json  playwright.auth.config.ts  playwright.config.ts  prompt_debug.txt  pyproject.toml  recorder.py  recorder_action_capture.js  recorder_template.py  requirements.txt  sqat.service.template  tsconfig.json  verify_jira.py
server/app/: main.py
server/app/agents/: __init__.py  agent1_brd.py  agent2_swagger.py  agent3_dedup.py  agent3_planner.py  agent4_context_builder.py  agent5_script_generator.py  agent6_classifier.py  agent7_retry.py  scenario_common.py  xray_csv_generator.py
server/app/core/: config.py  security.py
server/app/db/: qdrant.py  session.py
server/app/dependencies/: auth.py
server/app/graph/: phase3_graph.py  scenario_graph.py
server/app/models/: __init__.py  phase3.py  project.py  scenario.py  user.py
server/app/routers/: auth.py  files.py  ingestion.py  members.py  phase3.py  projects.py  recorder.py  scenarios.py
server/app/schemas/: auth.py  ingestion.py  phase3.py  project.py  scenario.py
server/app/services/: artifact_paths.py  artifact_registry.py  auth_service.py  auth_state_cleanup_scheduler.py  auth_state_cleanup_service.py  auth_state_service.py  chunking_service.py  credential_service.py  csv_reader.py  embedding_service.py  execution_state_service.py  file_service.py  hls_group_service.py  ingestion_service.py  jira_service.py  job_claim_service.py  mcp_server.py  member_service.py  pdf_extractor_service.py  pdf_service.py  phase3_jobs.py  phase3_preflight.py  phase3_worker.py  (+9 more)
server/database/: schema.sql
server/migrations/: env.py
server/tests/: auth.setup.ts  test_agent5_negative_validation_guard.py  test_agent5_wait_and_assertion_guards.py  test_phase3_phase1_hardening.py  test_recorder_action_capture_js.py  test_recorder_contract_helpers.py  test_recorder_noise_filter.py  test_recorder_quality_summary.py
(+97 files in other folders)
