[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.16.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "bcrypt==4.2.1",
    "cffi==2.0.0",
    "click==8.3.2",
    "colorama==0.4.6",
    "cryptography==46.0.6",
    "deprecated==1.3.1",
    "dnspython==2.8.0",
    "ecdsa==0.19.2",
    "email-validator==2.2.0",
    "fastapi==0.116.0",
    "greenlet==3.3.2",
    "h11==0.16.0",
    "httptools==0.7.1",
    "idna==3.11",
    "limits==5.8.0",
    "mako==1.3.10",
    "markupsafe==3.0.3",
    "openapi-spec-validator>=0.8.4",
    "packaging==26.0",
    "playwright>=1.58.0",
    "prance>=25.4.8.0",
    "psycopg2-binary==2.9.10",
    "pyasn1==0.6.3",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.10.1",
    "pymupdf>=1.27.2.2",
    "python-dotenv==1.2.2",
    "python-jose[cryptography]==3.5.0",
    "python-multipart==0.0.20",
    "pyyaml==6.0.3",
    "qdrant-client>=1.17.1",
    "langchain-core>=1.0.0",
    "langchain-groq>=1.0.0",
    "langgraph>=1.0.0",
    "requests>=2.33.1",
    "rsa==4.9.1",
    "sentence-transformers>=5.4.1",
    "six==1.17.0",
    "slowapi==0.1.9",
    "sqlalchemy==2.0.42",
    "starlette==0.46.2",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uuid6==2025.0.1",
    "uvicorn[standard]==0.35.0",
    "watchfiles==1.1.1",
    "websockets==16.0",
    "wrapt==2.1.2",
]
